--- a/src/sass/part/_button.sass
+++ b/src/sass/part/_button.sass
@@ -79,6 +79,8 @@
 		text-align: center
 		background-color: $pink
 		border-radius: 50%
+		position: relative
+		z-index: 55
 		+vertical
 		.icon
 			vertical-align: middle
