--- a/src/sass/part/_icon.sass
+++ b/src/sass/part/_icon.sass
@@ -5,6 +5,8 @@
 		+sprite($s-icon-login)
 	&-search
 		+sprite($s-icon-search)
+		&-white
+			+sprite($s-icon-search-white)
 	&-menu
 		+sprite($s-icon-menu)
 	&-basket
