--- a/src/sass/part/_main.sass
+++ b/src/sass/part/_main.sass
@@ -805,9 +805,9 @@
 			word-wrap: break-word
 		&_item
 			float: right
-			width: 118px 
+			width: 118px
 			+r(568)
-				width: 140px 
+				width: 140px
 	&__price
 		font-size: 0
 		padding-top: 45px
@@ -852,7 +852,7 @@
 			float: left
 			+r(568)
 				float: none
-				margin: 0 auto 
+				margin: 0 auto
 				display: block
 				max-width: 280px
 // case
@@ -905,7 +905,7 @@
 			cursor: pointer
 			&:not(:last-child)
 				margin-bottom: 10px
-			&.slick-active
+			&.slick-current
 				border-color: $black-lighten
 			img
 				max-height: 100px
@@ -1050,7 +1050,7 @@
 		.cart__price
 			+r(991)
 				display: none
-				
+
 	&__col
 		padding: 20px 40px
 		position: relative
