--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -339,7 +339,7 @@ title: card
 		<!-- popup BEGIN -->
 		<div class="popup js-modal" data-modal="comment">
 			<div class="inner popup__inner">
-				<div class="popup__content">
+				<div class="popup__content js-modal-prevent">
 					<a href="#" class="btn-close js-modal-control" data-target="comment"><i class="icon icon-close"></i></a>
 					<!-- form BEGIN -->
 					<form action="/" class="form form-indent">
@@ -385,6 +385,7 @@ title: card
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/jquery.autocomplete.min.js"></script>
 	<script src="js/vendor/select2.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
