--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -382,6 +382,7 @@ title: TheBottle
 	<script src="js/vendor/perfect-scrollbar.min.js"></script>
 	<script src="js/vendor/perfect-scrollbar.min.js"></script>
 	<script src="js/vendor/select2.min.js"></script>
+	<script src="js/vendor/jquery.autocomplete.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
 	<script src="js/app.js"></script>
 	<script>
