--- a/src/templates/partials/_head.html
+++ b/src/templates/partials/_head.html
@@ -11,5 +11,6 @@
 	<!-- Libs stylesheet -->
 	<link rel="stylesheet" media="all" href="css/perfect-scrollbar.css">
 	<link rel="stylesheet" media="all" href="css/select2.min.css">
+	<link rel="stylesheet" media="all" href="css/input.css">
 	<link rel="stylesheet" media="all" href="css/style.min.css">
 </head>
