--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -116,13 +116,14 @@ title: about
 		</div>
 		<!-- about END -->
 
-
+		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
 	</div>
 
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/jquery.autocomplete.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
 
