--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -146,13 +146,14 @@ title: cart
 			</div>
 		</div>
 		<!-- cart-page END -->
-
+		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
 	</div>
 
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/jquery.autocomplete.min.js"></script>
 	<script src="js/vendor/select2.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
