--- a/src/templates/contacts.html
+++ b/src/templates/contacts.html
@@ -63,13 +63,14 @@ title: contacts
 			</div>
 		</div>
 		<!-- contacts END -->
-
+		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
 	</div>
 
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/jquery.autocomplete.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
 
