--- a/src/templates/delivery.html
+++ b/src/templates/delivery.html
@@ -35,13 +35,14 @@ title: delivery
 			</div>
 		</div>
 		<!-- delivery END -->
-
+		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
 	</div>
 
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/jquery.autocomplete.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
 
