--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -1,10 +1,10 @@
 <!-- header BEGIN -->
 <header class="header js-accordion">
-	<div class="inner">
-		<div class="header__wrapper">
+	<div class="header__wrapper">
+		<div class="inner">
 			<div class="header__left">
 				<a href="#" class="header__btn btn_menu js-accordion-btn"><i class="icon icon-menu"></i></a>
-				<a href="#" class="header__btn btn_search"><i class="icon icon-search"></i></a>
+				<a href="#" class="header__btn btn_search js-search-open"><i class="icon icon-search"></i></a>
 			</div>
 			<a href="index.html" class="logo header__logo"><img src="img/logo.png" alt="THEBOTTLE"></a>
 			<div class="header__right">
@@ -17,8 +17,19 @@
 				</a>
 			</div>
 		</div>
+		<div class="search header__search js-search-modal">
+			<div class="inner">
+				<form action="/" class="search__form">
+					<div class="search__wrapper">
+						<input type="text" class="search__input js-autocomplete js-search-input" placeholder="Поиск по каталогу">
+						<a href="#" class="search__close js-search-btn"><i class="icon icon-close-gray"></i></a>
+					</div>
+					<button class="btn btn_small search__btn">найти <i class="icon icon-search-white"></i></button>
+				</form>
+			</div>
+		</div>
 	</div>
-	<div class="menu header__menu js-accordion-item">
+	<nav class="menu header__menu js-accordion-item">
 		<div class="inner">
 			<div class="row">
 				<div class="col col-3 col-sm-6 col-xxs-12">
@@ -99,6 +110,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</nav>
 </header>
 <!-- header END -->
