--- a/src/templates/subcategory.html
+++ b/src/templates/subcategory.html
@@ -532,13 +532,14 @@ title: subcategory
 			</div>
 		</div>
 		<!-- subcategory END -->
-
+		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
 	</div>
 
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/jquery.autocomplete.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
 
