--- a/src/sass/part/_main.sass
+++ b/src/sass/part/_main.sass
@@ -884,7 +884,9 @@
 		top: 0
 		z-index: 444
 		+r(1119)
-			display: none
+			opacity: 0
+			visibility: hidden
+			z-index: -1
 	&__for
 		height: 100%
 		padding: 0 110px
