--- a/src/templates/contacts.html
+++ b/src/templates/contacts.html
@@ -70,6 +70,7 @@ title: contacts
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/select2.min.js"></script>
 	<script src="js/vendor/jquery.autocomplete.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
