--- a/src/templates/delivery.html
+++ b/src/templates/delivery.html
@@ -42,6 +42,7 @@ title: delivery
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/select2.min.js"></script>
 	<script src="js/vendor/jquery.autocomplete.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
