--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -369,7 +369,7 @@ title: card
 								</div>
 							</div>
 							<div class="col col-12 form__col">
-								<button class="btn btn_large btn_block">оценить и оставить отзыв</button>
+								<button class="btn btn_large btn_block btn__mobile_small">оценить и оставить отзыв</button>
 							</div>
 						</div>
 					</form>
