--- a/src/templates/ordering.html
+++ b/src/templates/ordering.html
@@ -318,7 +318,7 @@ title: ordering
 										</label>
 									</div>
 								</div>
-								<button class="btn btn_large btn_block">оформить заказ</button>
+								<button class="btn btn_large btn_block js-modal-control" data-target="comment">оформить заказ</button>
 							</div>
 						</div>
 					</form>
