add scrollbar and fixed bags

--- a/src/sass/part/_button.sass
+++ b/src/sass/part/_button.sass
@@ -150,13 +150,11 @@
 		right: 100px
 		bottom: 40px
 		z-index: 9991
+		display: none
 		+r(991)
-			position: relative
-			right: 0
-			bottom: 0
-			top: 16px
-			display: block
-			margin: 0 auto
+			right: 50%
+			margin-right: -16px
+			bottom: 10px
 		.icon
 			vertical-align: middle
 	&__mobile
