--- a/src/templates/partials/_head.html
+++ b/src/templates/partials/_head.html
@@ -9,8 +9,8 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 	<!-- Libs stylesheet -->
-	<link rel="stylesheet" media="all" href="css/perfect-scrollbar.css">
 	<link rel="stylesheet" media="all" href="css/select2.min.css">
 	<link rel="stylesheet" media="all" href="css/input.css">
+	<link rel="stylesheet" media="all" href="css/jquery.scrollbar.css">
 	<link rel="stylesheet" media="all" href="css/style.min.css">
 </head>
