--- a/src/sass/_scaffolding.sass
+++ b/src/sass/_scaffolding.sass
@@ -300,6 +300,7 @@ h4
 	right: 0
 	bottom: 0
 	z-index: 9999
+	padding: 10px 0
 	+vertical
 	overflow-y: auto
 	opacity: 0
@@ -343,6 +344,7 @@ h4
 			margin-bottom: 20px
 .popup-aside
 	text-align: right
+	padding: 0
 	&:before
 		display: none
 	.popup__content
@@ -354,7 +356,7 @@ h4
 		z-index: 9999
 		padding: 30px 0 40px
 		+r(1119)
-			padding-bottom: 20px
+			padding: 20px 0
 		+r(360)
 			width: 100%
 
@@ -435,6 +437,7 @@ h4
 			overflow: auto
 			height: 100%
 			padding: 0 20px
+			position: relative
 	&__body
 		+r(991)
 			padding: 50px 0 0
