--- a/src/sass/part/_main.sass
+++ b/src/sass/part/_main.sass
@@ -530,6 +530,7 @@
 			padding: 40px 0 160px
 	&__item
 		overflow: auto
+		width: 100%
 		height: 100%
 		position: relative
 		padding: 0 40px
@@ -703,6 +704,9 @@
 			vertical-align: top
 			margin: 5px 0 0 7px
 			+arr(6, 4, $black-lighten, b)
+		&.is-active
+			&:after
+				+arr(6, 4, $black-lighten, t)
 		&:first-child
 			&:before
 				content: ""
@@ -884,7 +888,8 @@
 		top: 0
 		z-index: 444
 		+r(1119)
-			display: none
+			visibility: hidden
+			opacity: 0
 	&__for
 		height: 100%
 		padding: 0 110px
@@ -1386,3 +1391,19 @@
 		a
 			color: #818181
 			font-weight: 400
+
+// results
+.results
+	padding-bottom: 40px
+	+r(991)
+		padding-bottom: 0
+	.sub-title
+		font-size: 20px
+		letter-spacing: .025em
+		font-weight: 700
+		margin-bottom: 60px
+		+r(991)
+			margin-bottom: 40px
+	.item
+		&__wrapper
+			box-shadow: 0 0 20px rgba(0,0,0,.1)
