--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -4,7 +4,7 @@ title: card
 <!doctype html>
 <html lang="ru-Ru">
 {% include "partials/_head.html" %}
-<body>
+<body class="js-body">
 	<div class="out">
 		{% include "partials/_header.html" %}
 
@@ -134,45 +134,45 @@ title: card
 				</div>
 				<div class="tabs__content">
 					{% for item in range(0,3) %}
-					    <div class="tabs__item js-tabs-content active" data-content="{{loop.index}}">
-					    	<div class="description">
-					    		<div class="title title_center">Дегустационные заметки {{loop.index}}</div>
-					    		<div class="description__grid">
-					    			<div class="row">
-					    				<div class="col col-6 col-sm-12">
-					    					<div class="description__row">
-					    						<div class="sub-title">Аромат</div>
-					    						<p>Виски имеет очень мягкий аромат с ярко выраженными нотками меда, пряностей, корицы и цветов.</p>
-					    					</div>
-					    					<div class="description__row">
-					    						<div class="sub-title">Цвет</div>
-					    						<p>Виски янтарного цвета с золотыми отблесками.</p>
-					    					</div>
-					    				</div>
-					    				<div class="col col-6 col-sm-12">
-					    					<div class="description__row">
-					    						<div class="sub-title">Вкус</div>
-					    						<p>Виски обладает легким вкусом с тонами меда, ириски и груши, легкими нюансами бадьяна.</p>
-					    					</div>
-					    					<div class="description__row">
-					    						<div class="sub-title">Употребление</div>
-					    						<p>Виски рекомендуется употреблять в чистом виде немного охлажденным, со льдом или добавлять в кофе.</p>
-					    					</div>
-					    				</div>
-					    			</div>
-					    		</div>
-					    		<div class="description__block">
-					    			<div class="title title_center">Интересные факты</div>
-					    			<div class="sub-title sub-title_center">Виски</div>
-					    			<p>"Jack Daniels" Tennessee Honey — это смесь виски "Джек Дэниэлс" и медового ликера. Напиток является одним из наиболее захватывающих в мире виски. "Джек Дэниэлс" Теннесси Хани обладает янтарным цветом с золотистыми отблесками и больше напоминает по цвету бутылку с медом.</p>
-					    			<p>Этот виски является самым употребляемым среди всех, которые изготавливаются на основе ликеров. Он весьма сладкий, но не приторный. Сладость напитка уравновешена необходимым количеством корицы и специй. Этот напиток порадует как сильный пол, так и прекрасных дам.</p>
-					    			<div class="sub-title sub-title_center">Jack Daniels</div>
-					    			<p>О виски Jack Daniels можно говорить бесконечно долго, ведь это действительно уникальный напиток. Для него одного выделили категорию виски "теннесси", к которой относятся напитки, фильтруемые через уголь сахарного клена. Только для виски Джек Дэниэлс применяется особая технология производства. Исходное сырье всё то же — это пшеница, рожь, ячмень.</p>
-					    			<p>Брожение виски Jack Daniels происходит на кислом сусле, но самое интересное — это процесс фильтрации. Для холодной фильтрации спиртов применяется уголь сахарного клена толщиной в 3 метра. Причем фильтрация происходит до помещения спиртов в бочки, а не перед разливом в бутылки. Таким образом, в обожженных изнутри бочках выдерживается уже отфильтрованный, чистый виски, который насыщается ароматами и оттенками дерева. </p>
-					    			<p>Производители этого виски говорят, что не смотрят на календарь — только дегустаторы определяют, когда он готов к разливу по бутылкам. Именно Джек Дэниэлс называют виски, а не бурбон, хотя он на 80% состоит из кукурузных спиртов. Такое различие обусловлено именно процессом фильтрации, придающим виски особенно мягкий и чистый вкус.</p>
-					    		</div>
-					    	</div>
-					    </div>
+					<div class="tabs__item js-tabs-content active" data-content="{{loop.index}}">
+						<div class="description">
+							<div class="title title_center">Дегустационные заметки {{loop.index}}</div>
+							<div class="description__grid">
+								<div class="row">
+									<div class="col col-6 col-sm-12">
+										<div class="description__row">
+											<div class="sub-title">Аромат</div>
+											<p>Виски имеет очень мягкий аромат с ярко выраженными нотками меда, пряностей, корицы и цветов.</p>
+										</div>
+										<div class="description__row">
+											<div class="sub-title">Цвет</div>
+											<p>Виски янтарного цвета с золотыми отблесками.</p>
+										</div>
+									</div>
+									<div class="col col-6 col-sm-12">
+										<div class="description__row">
+											<div class="sub-title">Вкус</div>
+											<p>Виски обладает легким вкусом с тонами меда, ириски и груши, легкими нюансами бадьяна.</p>
+										</div>
+										<div class="description__row">
+											<div class="sub-title">Употребление</div>
+											<p>Виски рекомендуется употреблять в чистом виде немного охлажденным, со льдом или добавлять в кофе.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="description__block">
+								<div class="title title_center">Интересные факты</div>
+								<div class="sub-title sub-title_center">Виски</div>
+								<p>"Jack Daniels" Tennessee Honey — это смесь виски "Джек Дэниэлс" и медового ликера. Напиток является одним из наиболее захватывающих в мире виски. "Джек Дэниэлс" Теннесси Хани обладает янтарным цветом с золотистыми отблесками и больше напоминает по цвету бутылку с медом.</p>
+								<p>Этот виски является самым употребляемым среди всех, которые изготавливаются на основе ликеров. Он весьма сладкий, но не приторный. Сладость напитка уравновешена необходимым количеством корицы и специй. Этот напиток порадует как сильный пол, так и прекрасных дам.</p>
+								<div class="sub-title sub-title_center">Jack Daniels</div>
+								<p>О виски Jack Daniels можно говорить бесконечно долго, ведь это действительно уникальный напиток. Для него одного выделили категорию виски "теннесси", к которой относятся напитки, фильтруемые через уголь сахарного клена. Только для виски Джек Дэниэлс применяется особая технология производства. Исходное сырье всё то же — это пшеница, рожь, ячмень.</p>
+								<p>Брожение виски Jack Daniels происходит на кислом сусле, но самое интересное — это процесс фильтрации. Для холодной фильтрации спиртов применяется уголь сахарного клена толщиной в 3 метра. Причем фильтрация происходит до помещения спиртов в бочки, а не перед разливом в бутылки. Таким образом, в обожженных изнутри бочках выдерживается уже отфильтрованный, чистый виски, который насыщается ароматами и оттенками дерева. </p>
+								<p>Производители этого виски говорят, что не смотрят на календарь — только дегустаторы определяют, когда он готов к разливу по бутылкам. Именно Джек Дэниэлс называют виски, а не бурбон, хотя он на 80% состоит из кукурузных спиртов. Такое различие обусловлено именно процессом фильтрации, придающим виски особенно мягкий и чистый вкус.</p>
+							</div>
+						</div>
+					</div>
 					{% endfor %}
 				</div>
 			</div>
@@ -377,6 +377,9 @@ title: card
 				</div>
 			</div>
 		</div>
+		<!-- btn-top BEGIN -->
+		<a href=".js-body" class="btn-top js-scroll-to js-btn-top"><i class="icon icon-arrow-top"></i></a>
+		<!-- btn-top END -->
 		<!-- popup END -->
 		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
@@ -384,9 +387,10 @@ title: card
 
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
-	<script src="js/vendor/slick.min.js"></script>
-	<script src="js/vendor/jquery.autocomplete.min.js"></script>
+	<script src="js/vendor/jquery.scrollbar.min.js"></script>
 	<script src="js/vendor/select2.min.js"></script>
+	<script src="js/vendor/jquery.autocomplete.min.js"></script>
+	<script src="js/vendor/slick.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
 
