--- a/src/templates/category.html
+++ b/src/templates/category.html
@@ -4,7 +4,7 @@ title: category
 <!doctype html>
 <html lang="ru-Ru">
 {% include "partials/_head.html" %}
-<body>
+<body class="js-body">
 	<div class="out">
 		{% include "partials/_header.html" %}
 
@@ -334,6 +334,9 @@ title: category
 				</div>
 			</div>
 		</div>
+		<!-- btn-top BEGIN -->
+		<a href=".js-body" class="btn-top js-scroll-to js-btn-top"><i class="icon icon-arrow-top"></i></a>
+		<!-- btn-top END -->
 		<!-- popular END -->
 		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
@@ -341,9 +344,10 @@ title: category
 
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
-	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/jquery.scrollbar.min.js"></script>
 	<script src="js/vendor/select2.min.js"></script>
 	<script src="js/vendor/jquery.autocomplete.min.js"></script>
+	<script src="js/vendor/slick.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
 
