--- a/src/templates/ordering.html
+++ b/src/templates/ordering.html
@@ -4,7 +4,7 @@ title: ordering
 <!doctype html>
 <html lang="ru-Ru">
 {% include "partials/_head.html" %}
-<body>
+<body class="js-body">
 	<div class="out">
 		{% include "partials/_header.html" %}
 
@@ -32,7 +32,7 @@ title: ordering
 						</div>
 					</div>
 					<div class="cart__body">
-						<div class="cart__scroll scrollbar">
+						<div class="cart__scroll scrollbar-cart">
 							<div class="cart__item">
 								<div class="cart__col cart__product">
 									<div class="cart__img">
@@ -339,6 +339,9 @@ title: ordering
 				</div>
 			</div>
 		</div>
+		<!-- btn-top BEGIN -->
+		<a href=".js-body" class="btn-top js-scroll-to js-btn-top"><i class="icon icon-arrow-top"></i></a>
+		<!-- btn-top END -->
 		<!-- popup END -->
 		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
@@ -346,13 +349,13 @@ title: ordering
 
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
-	<script src="js/vendor/slick.min.js"></script>
-	<script src="js/vendor/perfect-scrollbar.min.js"></script>
-	<script src="js/vendor/jquery.autocomplete.min.js"></script>
+	<script src="js/vendor/jquery.scrollbar.min.js"></script>
 	<script src="js/vendor/select2.min.js"></script>
+	<script src="js/vendor/jquery.autocomplete.min.js"></script>
+	<script src="js/vendor/slick.min.js"></script>
 	<script src="js/app.js"></script>
 	<script>
-		const ps = new PerfectScrollbar('.scrollbar');
+		const psAside = new PerfectScrollbar('.scrollbar-cart');
 	</script>
 	<!-- script end -->
 
