--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -14,10 +14,10 @@
 					<div class="sm-item">
 						<div class="sm-item__title">категории</div>
 						<ul class="sm-item__list">
-							<li><a href="#">Крепкие напитки</a></li>
-							<li><a href="#">Ликеры</a></li>
-							<li><a href="#">Вина и игристые вина</a></li>
-							<li><a href="#">Вермуты</a></li>
+							<li><a href="category.html">Крепкие напитки</a></li>
+							<li><a href="subcategory.html">Ликеры</a></li>
+							<li><a href="cart.html">Вина и игристые вина</a></li>
+							<li><a href="card.html">Вермуты</a></li>
 						</ul>
 					</div>
 				</div>
@@ -25,10 +25,10 @@
 					<div class="sm-item">
 						<div class="sm-item__title">информация</div>
 						<ul class="sm-item__list">
-							<li><a href="#">О магазине</a></li>
-							<li><a href="#">Доставка и оплата</a></li>
-							<li><a href="#">Условия работы</a></li>
-							<li><a href="#">Контакты</a></li>
+							<li><a href="about.html">О магазине</a></li>
+							<li><a href="delivery.html">Доставка и оплата</a></li>
+							<li><a href="ordering.html">Условия работы</a></li>
+							<li><a href="contacts.html">Контакты</a></li>
 						</ul>
 					</div>
 				</div>
