--- a/src/templates/results.html
+++ b/src/templates/results.html
@@ -1,5 +1,5 @@
 ---
-title: TheBottle
+title: results
 ---
 <!doctype html>
 <html lang="ru-Ru">
@@ -8,99 +8,17 @@ title: TheBottle
 	<div class="out">
 		{% include "partials/_header.html" %}
 
-		<!-- preview BEGIN -->
-		<div class="preview">
-			<div class="slider slider__preview">
-				<div class="js-slider-preview">
-					<div class="slider__item" style="background-image: url('img/slider-bg-00.png');">
-						<div class="inner">
-							<div class="slider__content">
-								<div class="slider__wrapper">
-									<div class="slider__content_left">
-										<h2>Jack Daniel’s Honey</h2>
-										<p>Американский виски, который имеет насыщенный аромат и мягкий вкус с нотками дыма.</p>
-										<a href="#" class="btn btn_large">купить сейчас</a>
-									</div>
-									<div class="slider__label">
-										<span class="label">премиальный виски</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="slider__item" style="background-image: url('img/slider-bg-00.png');">
-						<div class="inner">
-							<div class="slider__content">
-								<div class="slider__wrapper">
-									<div class="slider__content_left">
-										<h2>Jack Daniel’s Honey</h2>
-										<p>Американский виски, который имеет насыщенный аромат и мягкий вкус с нотками дыма.</p>
-										<a href="#" class="btn btn_large">купить сейчас</a>
-									</div>
-									<div class="slider__label">
-										<span class="label">премиальный виски</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="slider__item" style="background-image: url('img/slider-bg-00.png');">
-						<div class="inner">
-							<div class="slider__content">
-								<div class="slider__wrapper">
-									<div class="slider__content_left">
-										<h2>Jack Daniel’s Honey</h2>
-										<p>Американский виски, который имеет насыщенный аромат и мягкий вкус с нотками дыма.</p>
-										<a href="#" class="btn btn_large">купить сейчас</a>
-									</div>
-									<div class="slider__label">
-										<span class="label">премиальный виски</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="preview__btn js-slick-dots">
-				<a href="#product" class="btn_next js-scroll-to"><span>смотреть далее</span><i class="icon icon-mouse"></i></a>
-			</div>
-		</div>
-		<!-- preview END -->
-
-		<!-- product BEGIN -->
-		<div class="product" id="product">
+		<!-- results BEGIN -->
+		<div class="results">
 			<div class="inner">
-				<div class="row">
-					<div class="col col-6 col-sm-12">
-						<div class="banner" style="background-image: url('img/product-bg-00.png');">
-							<div class="banner__wrapper">
-								<h4>Johnnie Walker</h4>
-								<p>виски</p>
-								<a href="#" class="banner__buy banner_position animation-line">купить сейчас</a>
-							</div>
-						</div>
-					</div>
-					<div class="col col-6 col-sm-12">
-						<div class="banner" style="background-image: url('img/product-bg-01.png');">
-							<div class="banner__wrapper">
-								<h4>Ram's Gate</h4>
-								<p>вино</p>
-								<a href="#" class="banner__buy banner_position animation-line">купить сейчас</a>
-							</div>
-						</div>
-					</div>
+				<div class="title title_inline">
+					<h3>Результаты поиска<span>.</span></h3>
+					<ul class="breadcrumbs breadcrumbs_right">
+						<li><a href="#">Главная</a></li>
+						<li class="current"><a href="#">Результаты поиска</a></li>
+					</ul>
 				</div>
-			</div>
-		</div>
-		<!-- product END -->
-
-		<!-- popular BEGIN -->
-		<div class="popular">
-			<div class="inner">
-				<div class="title">
-					<h3>Популярные товары<span>.</span></h3>
-				</div>
+				<div class="sub-title">Johnie Walker</div>
 				<div class="row">
 					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
@@ -156,7 +74,6 @@ title: TheBottle
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-								<div class="item__sticker item__sticker_orange">Акция</div>
 								<div class="item__img">
 									<img src="img/popular-img-00.png" alt="img">
 								</div>
@@ -182,7 +99,6 @@ title: TheBottle
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-								<div class="item__sticker item__sticker_yellow">новинки</div>
 								<div class="item__img">
 									<img src="img/popular-img-00.png" alt="img">
 								</div>
@@ -258,7 +174,6 @@ title: TheBottle
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-								<div class="item__sticker item__sticker_orange">Акция</div>
 								<div class="item__img">
 									<img src="img/popular-img-00.png" alt="img">
 								</div>
@@ -284,7 +199,6 @@ title: TheBottle
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-								<div class="item__sticker item__sticker_yellow">новинки</div>
 								<div class="item__img">
 									<img src="img/popular-img-00.png" alt="img">
 								</div>
@@ -309,70 +223,10 @@ title: TheBottle
 				</div>
 			</div>
 		</div>
-		<!-- popular END -->
-
-		<!-- categories BEGIN -->
-		<div class="categories">
-			<div class="inner">
-				<div class="title">
-					<h3>категории<span>.</span></h3>
-				</div>
-				<div class="box box_left">
-					<div class="box__img">
-						<div class="img" style="background-image: url('img/categories-img-large-00.png');"></div>
-					</div>
-					<div class="box__wrapper">
-						<div class="box__content">
-							<span>Вина и игристые вина</span>
-							<p>Вино – это настроение, разговор, отношения. Речь течёт вместе с вином. Оно естественно входит в состав итальянского, французского, испанского языков.</p>
-							<a href="#" class="box__btn animation-line">перейти в категорию</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box_right">
-					<div class="box__img">
-						<div class="img" style="background-image: url('img/categories-img-small-00.png');"></div>
-					</div>
-					<div class="box__wrapper">
-						<div class="box__content">
-							<span>Вина и игристые вина</span>
-							<p>Вино – это настроение, разговор, отношения. Речь течёт вместе с вином. Оно естественно входит в состав итальянского, французского, испанского языков.</p>
-							<a href="#" class="box__btn animation-line">перейти в категорию</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box_left">
-					<div class="box__img">
-						<div class="img" style="background-image: url('img/categories-img-large-00.png');"></div>
-					</div>
-					<div class="box__wrapper">
-						<div class="box__content">
-							<span>Вина и игристые вина</span>
-							<p>Вино – это настроение, разговор, отношения. Речь течёт вместе с вином. Оно естественно входит в состав итальянского, французского, испанского языков.</p>
-							<a href="#" class="box__btn animation-line">перейти в категорию</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box_right">
-					<div class="box__img">
-						<div class="img" style="background-image: url('img/categories-img-small-00.png');"></div>
-					</div>
-					<div class="box__wrapper">
-						<div class="box__content">
-							<span>Вина и игристые вина</span>
-							<p>Вино – это настроение, разговор, отношения. Речь течёт вместе с вином. Оно естественно входит в состав итальянского, французского, испанского языков.</p>
-							<a href="#" class="box__btn animation-line">перейти в категорию</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- categories END -->
-
 		<!-- btn-top BEGIN -->
 		<a href=".js-body" class="btn-top js-scroll-to js-btn-top"><i class="icon icon-arrow-top"></i></a>
 		<!-- btn-top END -->
-
+		<!-- cart-page END -->
 		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
 	</div>
